# dfcVLA

./: .gitignore  pyproject.toml
scripts/: train_dfc_pytorch.py
scripts/dfc_scripts/: dfc_compute_norm_stats.py  dfc_download_jax_ckpts.py  dfc_pytorch_dataloader_test.py
src/dfcvla/: config.py  pyproject.toml
src/dfcvla/models/: dfcvla.py
src/openpi/shared/: download.py
src/openpi/training/: config.py  data_loader_test.py
