[project]
name = "dfcvla"
version = "0.0.1"
requires-python = ">=3.11"

# ==============================
# ðŸ”¥ æœªæ¥ä½ éœ€è¦ä¾èµ–æ—¶å¾€è¿™é‡Œæ·»åŠ 
# ç¤ºä¾‹ï¼ˆæš‚æ—¶ç•™ç©ºï¼Œä¸å½±å“çŽ¯å¢ƒï¼‰
# dependencies = [
#     "timm>=0.9",
#     "opencv-python",
# ]
# ==============================
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
